[package]
name = "fts_gitignore_nuke"
version = "0.1.0"
authors = ["Forrest Smith <forrestthewoods@gmail.com>"]
edition = "2018"
description = """
CLI tool to find files hidden by .gitignore files so they can be deleted.
"""
documentation = "https://github.com/forrestthewoods/fts_gitignore_nuke"
homepage  = "https://github.com/forrestthewoods/fts_gamemath"
repository  = "https://github.com/forrestthewoods/fts_gamemath"
readme = "readme.md"
keywords = ["gitignore", "ignore"]
categories = ["cli", "command-line-utilities", "gitignore"]
license = "Unlicense OR MIT"

[dependencies]
anyhow = "1.0"
clap = "2.33.1"
crossbeam-deque = "0.7.3"
crossbeam-utils = "0.7.2"
ignore = "0.4.15"
itertools = "0.9.0"
num_cpus = "1.13.0"
num-format = "0.4.0"
walkdir = "2.3.1"

[profile.release]
lto = false
codegen-units = 16